# dagdog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
dagdog/: dag.py  nodes.py  state.py
demo/: README.md  project.py
demo/tasks/: task_0.py  task_1.py  task_2.py  task_3.py
tests/: test_demo.py
