[project]
name = "dagdog"
version = "0.1.5"
description = "A lightweight DAG system for data analysis dev ops"
authors = [{ name = "Zach Kurtz", email = "zkurtz@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx >=3.3",
    "pandas >=2.2.2",
]

[tool.setuptools]
packages = ["dagdog", "demo"]

[dependency-groups]
dev = [
  "pre-commit >=3.8.0",
  "pyright >=1.1.378",
  "ruff >=0.6.3",
  "pytest >=8.3.2",
]

[project.urls]
Source = "https://github.com/zkurtz/dagdog"

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.pyright]
include = ["dagdog", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
